--- a/configpanel/res/values-ja/strings.xml
+++ b/configpanel/res/values-ja/strings.xml
@@ -52,5 +52,17 @@
   <string name="oclick_notification_title_disconnected">O-Clickが切断しました</string>
   <string name="oclick_notification_content_disconnected">O-Clickボタンをクリックして再接続します</string>
   <!-- Button settings -->
+  <string name="button_panel_title">追加のボタン設定</string>
+  <string name="button_swap_title">ボタンの入れ替え</string>
+  <string name="button_swap_summary">[アプリ履歴]ボタンと[戻る]ボタンの位置を入れ替える</string>
   <!-- Notification slider -->
+  <string name="notification_slider_category_title">アラートスライダー</string>
+  <string name="notification_slider_selection_dialog_title">動作</string>
+  <string name="notification_slider_top_position">上部</string>
+  <string name="notification_slider_middle_position">中央</string>
+  <string name="notification_slider_bottom_position">下部</string>
+  <string name="notification_slider_mode_total_silence">サイレント</string>
+  <string name="notification_slider_mode_alarms_only">アラームのみ</string>
+  <string name="notification_slider_mode_priority_only">重要な通知のみ</string>
+  <string name="notification_slider_mode_none">なし</string>
 </resources>
